12/6/10 move battery voltage slider up a few pixels so that the slider thumb always stays inside the battery image
12/6/10 attempt at color coding the backgrounds of E-Field vector labels
# 0.00.52 (46811) Dec 3, 2010
12/3/10 fix: plate area drag handle gets out of sync with mouse cursor
12/3/10 fix: plate area drag handle behavior was jerky because some mouse events were being ignored
12/3/10 fix: dashed line isn't perfectly aligned with arrow in plate area drag handle
12/3/10 simplify computation of rotation angle for plate area drag handle
12/3/10 fix: plate separation drag handle was off by the width of the plate, causing it to jump slightly when dragging started
12/3/10 convert members to local variables in PlateAreaDragHandleNode
12/3/10 change dev shape for E-Field probe origin from a red "+" to a red dot, to accommodate new angled crosshairs
12/3/10 new E-Field Probe image: crosshairs are angled, crosshairs are gray so they're visible on dense black E-field
12/3/10 put "Material:" label to the left of combo box, instead of above
# 0.00.51 (46753) Dec 2, 2010
12/2/10 make battery slider tick marks a little longer so that they extend past the slider thumb
12/2/10 convert battery slider thumb to grayscale, to address colorblindness issue #2593
12/2/10 try minor tick marks outside of the bar meters, to address colorblindness issue #2593
12/2/10 change current indicator model from dV/dt to dQ/dt, so that changes to plate area and separation cause current flow
12/2/10 wire up all observers and listeners in the same place in source code, at the end of constructors
# 0.00.50 (46705) Dec 1, 2010
12/1/10 dev version with lots of internal cleanup and a few fixes
11/30/10 clean up CCKStrategyWithRounding, strategy for putting charges on plate surface
11/30/10 fix: zero tick mark is a little off on bar meters
11/30/10 #2593, identify colorblind issues
11/29/10 simplify BottomWire.createShape
11/29/10 remove bogus mvt in WireNode initialization